--- a/index.html
+++ b/index.html
@@ -18,5 +18,10 @@
       Excursion remembers places you like, and reccomends new points of interest
       around you.
     </h4>
+    <p><img src="./resources/images/camp.jpg" alt="tent" /></p>
+    <p><img src="./resources/images/phone.png" alt="phone" /></p>
+    <h2 class="header-secondary">Coming Soon for Iphone and Android</h2>
+    <p><a class="link-cta" href="#">Download Excursion (Coming soon!)</a></p>
+    <p class="footer">&copy Excursion</p>
   </body>
 </html>
